--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,12 @@ footer {
 
 h1 {
   color: #04AA6D;
-  font-size: 45px;
+  font-size: 44px;
+}
+
+h2 {
+  color: #04AA6D;
+  font-size: 22px;
 }
 
 /* 3*3 Grid */
@@ -130,4 +135,72 @@ input[type="text"] {
 
   color: black;
   font-size: 17px;
+}
+
+.popup_box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+.popup_box{
+  width: 400px;
+  background: #f2f2f2;
+  text-align: center;
+  align-items: center;
+  padding: 40px;
+  border: 1px solid #b3b3b3;
+  box-shadow: 0px 5px 10px rgba(0,0,0,.2);
+  z-index: 9999;
+  display: none;
+}
+.popup_box i{
+  font-size: 60px;
+  color: #eb9447;
+  border: 5px solid #eb9447;
+  padding: 20px 40px;
+  border-radius: 50%;
+  margin: -10px 0 20px 0;
+}
+.popup_box h1{
+  font-size: 30px;
+  color: #1b2631;
+  margin-bottom: 5px;
+}
+.popup_box label{
+  font-size: 23px;
+  color: #404040;
+}
+.popup_box .btns{
+  margin: 40px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+.btns .btn1, .btns .btn2{
+  background: red;
+  color: white;
+  font-size: 18px;
+  border-radius: 5px;
+  border: 1px solid red;
+  padding: 10px 13px;
+  height:100px;
+  width:100px;
+  text-align: center;
+  line-height: 100px;
+  font-size: 80px;
+  text-decoration: none;
+}
+.btns .btn2{
+  margin-left: 20px;
+  background: blue;
+  border: 1px solid blue;
+}
+.btns .btn1:hover{
+  transition: .5s;
+  background: red;
+}
+.btns .btn2:hover{
+  transition: .5s;
+  background: blue;
 }
