--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800;900&family=Roboto:wght@400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800;900&family=Roboto:wght@400;500;700;900&display=swap');
 
 body {margin: 0;}
 
@@ -7,9 +7,32 @@ body {
 }
 
 :root{
-  --cross: #FF073A;
-  --naught: #006AF9;
+  --white: #ffffff;
+  --grey: #333333;
+  --light-green: #04AA6D;
+  --dark-green: #028d5a;
+  --red: #FF073A;
+  --blue: #006AF9;
   --draw-speed: 0.2s
+}
+
+.container {
+  margin: auto;
+  position: relative;
+  min-height: 100vh;
+}
+
+.content {
+  display: flex;
+  width: 600px;
+  margin: auto;
+  margin-top: 50px;
+  padding: 0 50px;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+
+  background-color: var(--grey);
 }
 
 #page-container {
@@ -33,14 +56,14 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: var(--grey);
 }
 
 ul li {float: left;}
 
 ul li a {
   display: block;
-  color: white;
+  color: var(--white);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -53,11 +76,11 @@ ul li a:hover:not(.active) {background-color: #111;}
 
 ul li a.active {
   transition: background-color 0.5s;
-  background-color: #04AA6D;
+  background-color: var(--light-green);
 }
 
 ul li a.active:hover {
-  background-color: #028d5a;
+  background-color: var(--dark-green);
 }
 ul li.right {float: right;}
 
@@ -74,8 +97,8 @@ footer {
   bottom: 0;
   width: 100%;
   text-align: center;
-  background-color: #333;
-  color: white;
+  background-color: var(--grey);
+  color: var(--white);
   height : 5rem;
 }
 
@@ -87,80 +110,168 @@ footer {
 /* Boxes */
 
 h1 {
-  color: #04AA6D;
+  color: var(--light-green);
+  font-family: Poppins;
+  font-weight: 800;
   font-size: 44px;
 }
 
 h2 {
-  color: #04AA6D;
+  color: var(--light-green);
   font-size: 22px;
 }
 
-/* 3*3 Grid */
-.btn {
-  cursor: pointer;
-  width: 80px;
-  height: 80px;
-  margin: auto;
-  border: 1px solid gray;
-  border-radius: 6px;
-  font-size: 30px;
-  text-align: center;
+h1 span {
+  color: var(--white);
 }
 
-.reset-btn {
+.btn {
   box-sizing: border-box;
   width: 120px;
   height: 40px;
-  border: 1px solid #04AA6D;
-  margin: auto;
+  border: 1px solid var(--light-green);
   border-radius: 4px;
-  font-family: Verdana,
-  Geneva, Tahoma, sans-serif;
 
   transition: background-color 0.5s;
-  background-color: #04AA6D;
-  color: white;
+  background-color: var(--light-green);
+  color: var(--white);
   font-size: 20px;
   cursor: pointer;
 }
 
-.reset-btn:hover {
-  background-color: #028d5a;
+.btn:hover {
+  background-color: var(--dark-green);
 }
 
 input[type="text"] {
   font-weight: bolder;
 }
 
-.grid-container{
-  background-color: #333333;
-  align-content: center;
+.type-container {
   display: grid;
-  height: 300px;
-  width: 300px;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
+}
+
+.type-container button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 90px;
+  height: 110px;
+  background-color: var(--grey);
+  border-radius: 8px;
+  outline: none;
+  cursor: pointer;
+  border: 4px solid var(--white);
+
+  transition: border .4s;
+}
+
+.type-container button:hover {
+  border: 4px solid #dddddd;
+}
+
+
+.type-container button div {
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 2px;
+  border: 4px solid var(--white);
+  top: 4px;
+  right: 4px;
+
+  transition: border .4s;
+}
+
+.type-container button:hover div {
+  border: 4px solid #dddddd;
+}
+.type-container button svg {
+  fill: var(--white);
+  margin-bottom: 2px;
+  width: 60px;
+  height: 60px;
+
+  transition: fill .4s;
+}
+
+.type-container button:hover svg {
+  fill: #dddddd;
+}
+
+.type-container button strong {
+  font-family: Poppins;
+  size: 18px;
+  color: var(--white);
+  font-weight: 900;
+
+  transition: color .4s;
+}
+
+.type-container button:hover strong {
+  color: #ddd;
+}
+
+.status-action {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 35px 10px;
+}
+
+a.link {
+  size: 40px;
+  color: var(--white);
+  font-family: Poppins;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.print {
+  font-family: Poppins;
+  color: dodgerblue;
+  size: 40px;
+  font-weight: 600;
+}
+
+.game-grid {
+  background-color: var(--white);
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   gap: 10px;
 }
 
-/* Player turn space */
-#print {
-  font-family: Verdana,
-  Roboto, Tahoma, sans-serif;
+/* 3*3 Grid */
+.game-cell {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  color: dodgerblue;
-  font-size: 20px;
+  background-color: var(--grey);
+  cursor: pointer;
+  font-size: 30px;
+  text-align: center;
+
+  border: none;
+  outline: none;
+  
 }
 
-/* Game Instruction Text */
-#ins {
-  font-family: Verdana,
-  Roboto, Tahoma, sans-serif;
-
-  color: black;
-  font-size: 17px;
+.game-cell:disabled {
+  cursor: auto;
 }
 
 .popup_box{
@@ -170,6 +281,7 @@ input[type="text"] {
   transform: translate(-50%, -50%);
   border-radius: 5px;
 }
+
 .popup_box{
   width: 400px;
   background: #f2f2f2;
@@ -181,6 +293,7 @@ input[type="text"] {
   z-index: 9999;
   display: none;
 }
+
 .popup_box i{
   font-size: 60px;
   color: #eb9447;
@@ -189,26 +302,30 @@ input[type="text"] {
   border-radius: 50%;
   margin: -10px 0 20px 0;
 }
+
 .popup_box h1{
   font-size: 30px;
   color: #1b2631;
   margin-bottom: 5px;
 }
+
 .popup_box label{
   font-size: 23px;
   color: #404040;
 }
+
 .popup_box .btns{
   margin: 40px 0 0 0;
   display: flex;
   justify-content: space-between;
 }
+
 .btns .btn1, .btns .btn2{
-  background: red;
-  color: white;
+  background: var(--red);
+  color: var(--white);
   font-size: 18px;
   border-radius: 5px;
-  border: 1px solid red;
+  border: 1px solid var(--red);
   padding: 10px 13px;
   height:100px;
   width:100px;
@@ -217,26 +334,30 @@ input[type="text"] {
   font-size: 80px;
   text-decoration: none;
 }
+
 .btns .btn2{
   margin-left: 20px;
-  background: blue;
-  border: 1px solid blue;
+  background: var(--blue);
+  border: 1px solid var(--blue);
 }
+
 .btns .btn1:hover{
   transition: .5s;
-  background: red;
+  background: var(--red);
 }
+
 .btns .btn2:hover{
   transition: .5s;
-  background: blue;
+  background: var(--blue);
 }
 
 .naught {
-  stroke: var(--naught);
+  stroke: var(--blue);
   transform: rotateX(180deg);
 }
+
 .cross {
-  stroke: var(--cross);
+  stroke: var(--red);
 }
 
  path, circle {
