--- a/css/style.css
+++ b/css/style.css
@@ -1,599 +1,633 @@
 /* All this css shit you know */
 
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800;900&family=Roboto:wght@400;500;700;900&display=swap');
 
-:root{
-  --white: #ffffff;
-  --grey: #333333;
-  --light-green: #04AA6D;
-  --dark-green: #028d5a;
-  --red: #FF073A;
-  --blue: #006AF9;
-  --fb: #4267B2;
-  --gh: #4078c0;
-  --gm: #c71610;
-  --ig: #bc2a8d;
-  --yt: #FF0000;
-  --ps: #01875f;
-  --draw-speed: 0.2s
+:root {
+    --white: #ffffff;
+    --grey: #333333;
+    --light-green: #04AA6D;
+    --dark-green: #028d5a;
+    --red: #FF073A;
+    --blue: #006AF9;
+    --fb: #4267B2;
+    --gh: #4078c0;
+    --gm: #c71610;
+    --ig: #bc2a8d;
+    --yt: #FF0000;
+    --ps: #01875f;
+    --draw-speed: 0.2s
 }
 
 
 /* Page formatting  */
 
-body {margin: 0;}
+body {
+    margin: 0;
+}
 
 body {
-  font-family: Roboto;
+    font-family: Roboto;
 }
 
 .container {
-  margin: auto;
-  position: relative;
-  min-height: 100vh;
+    margin: auto;
+    position: relative;
+    min-height: 100vh;
 }
 
 .content-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  align-content: center;
-  padding-bottom: 5rem;    /* Footer height */ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+    padding-bottom: 5rem;
+    /* Footer height */
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: var(--grey);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: var(--grey);
 }
 
-ul li {float: left;}
+ul li {
+    float: left;
+}
 
 ul li a {
-  display: block;
-  color: var(--white);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  line-height: 25px;
-  transition: background-color 0.5s;
-  font-family: Poppins;
+    display: block;
+    color: var(--white);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    line-height: 25px;
+    transition: background-color 0.5s;
+    font-family: Poppins;
 }
 
-ul li a:hover:not(.active) {background-color: #111;}
+ul li a:hover:not(.active) {
+    background-color: #111;
+}
 
 ul li a.active {
-  transition: background-color 0.5s;
-  background-color: var(--light-green);
+    transition: background-color 0.5s;
+    background-color: var(--light-green);
 }
 
 ul li a.active:hover {
-  background-color: var(--dark-green);
+    background-color: var(--dark-green);
 }
-ul li.right {float: right;}
+
+ul li.right {
+    float: right;
+}
 
 ul li a.logo {
-  font-size: 25px;
-  font-weight: 800;
-  font-family: Poppins;
+    font-size: 25px;
+    font-weight: 800;
+    font-family: Poppins;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  background-color: var(--grey);
-  color: var(--white);
-  height : 5rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: var(--grey);
+    color: var(--white);
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (max-width: 600px) {
-  ul li.right, 
-  ul li {float: none;}
+
+    ul li.right,
+    ul li {
+        float: none;
+    }
 }
 
 h1 {
-  color: var(--light-green);
-  font-family: Poppins;
-  font-weight: 800;
-  font-size: 44px;
+    color: var(--light-green);
+    font-family: Poppins;
+    font-weight: 800;
+    font-size: 44px;
 }
 
 h2 {
-  color: var(--light-green);
-  font-size: 22px;
+    color: var(--light-green);
+    font-size: 22px;
 }
 
 h3 {
-  color: var(--white);
-  font-family: Poppins;
-  font-weight: 600;
-  size: 24px;
+    color: var(--white);
+    font-family: Poppins;
+    font-weight: 600;
+    size: 24px;
 }
 
 h1 span {
-  color: var(--white);
+    color: var(--white);
 }
 
 .cover1 {
-  display: flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;
-  background-color: var(--grey);
-  height: 600px;
-  width: 350px;
-  border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--grey);
+    height: 600px;
+    width: 350px;
+    border-radius: 10px;
 }
 
 .cover2 {
-  display: flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;
-  background-color: var(--grey);
-  height: 50em;
-  width: 100%;
-  border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--grey);
+    height: 50em;
+    width: 100%;
+    border-radius: 10px;
 }
+
 
 /* Buttons formatting */
 
 #but {
-  box-sizing: border-box;
-  width: 95px;
-  height: 30px;
-  border: 1px solid #04AA6D;
-  margin: auto;
-  border-radius: 4px;
-  font-family: Verdana,
-  Geneva, Tahoma, sans-serif;
-  text-align: center;
-  background-color: #04AA6D;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
+    box-sizing: border-box;
+    width: 95px;
+    height: 30px;
+    border: 1px solid #04AA6D;
+    margin: auto;
+    border-radius: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    background-color: #04AA6D;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .btn {
-  box-sizing: border-box;
-  width: 120px;
-  height: 40px;
-  border: 1px solid var(--light-green);
-  border-radius: 4px;
-
-  transition: background-color 0.5s;
-  background-color: var(--light-green);
-  color: var(--white);
-  font-size: 20px;
-  cursor: pointer;
+    box-sizing: border-box;
+    width: 120px;
+    height: 40px;
+    border: 1px solid var(--light-green);
+    border-radius: 4px;
+    transition: background-color 0.5s;
+    background-color: var(--light-green);
+    color: var(--white);
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .btn:hover {
-  background-color: var(--dark-green);
+    background-color: var(--dark-green);
 }
 
 .type-container {
-  display: flex;
-  justify-content: space-between;
-  width: 319px;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  align-items: center;
-  margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    width: 319px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    align-items: center;
+    margin-bottom: 40px;
 }
 
 .type-container button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 90px;
-  height: 110px;
-  background-color: var(--grey);
-  border-radius: 8px;
-  outline: none;
-  cursor: pointer;
-  border: 4px solid var(--white);
-
-  transition: border .4s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 90px;
+    height: 110px;
+    background-color: var(--grey);
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
+    border: 4px solid var(--white);
+    transition: border .4s;
 }
 
 .type-container button:hover {
-  border: 4px solid #dddddd;
+    border: 4px solid #dddddd;
 }
 
 .type-container button div {
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  border-radius: 2px;
-  border: 4px solid var(--white);
-  top: 4px;
-  right: 4px;
-
-  transition: border .4s;
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    border-radius: 2px;
+    border: 4px solid var(--white);
+    top: 4px;
+    right: 4px;
+    transition: border .4s;
 }
 
 .type-container button:hover div {
-  border: 4px solid #dddddd;
+    border: 4px solid #dddddd;
 }
-.type-container button svg {
-  fill: var(--white);
-  margin-bottom: 2px;
-  width: 60px;
-  height: 60px;
 
-  transition: fill .4s;
+.type-container button svg {
+    fill: var(--white);
+    margin-bottom: 2px;
+    width: 60px;
+    height: 60px;
+    transition: fill .4s;
 }
 
 .type-container button:hover svg {
-  fill: #dddddd;
+    fill: #dddddd;
 }
 
 .type-container button strong {
-  font-family: Poppins;
-  size: 18px;
-  color: var(--white);
-  font-weight: 900;
-
-  transition: color .4s;
+    font-family: Poppins;
+    size: 18px;
+    color: var(--white);
+    font-weight: 900;
+    transition: color .4s;
 }
 
 .type-container button:hover strong {
-  color: #ddd;
+    color: #ddd;
 }
+
 
 /* Others game controls */
 
 .status-action {
-  display: flex;
-  flex-direction: column;
-  height: 150px;
-  justify-content: space-between;
-  align-items: center;
-  margin: 15px 0px 15px 0px;
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0px 15px 0px;
 }
 
 .print {
-  font-family: Poppins;
-  color: dodgerblue;
-  size: 40px;
-  font-weight: 600;
+    font-family: Poppins;
+    color: dodgerblue;
+    size: 40px;
+    font-weight: 600;
+}
+
+#lineSvg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 320px;
+    width: 320px;
+    
+}
+
+.parent {
+    position: relative;
+    height: 640px;
+    width: 320px;
 }
 
 /* 3*3 Grid */
 
 .game-grid {
-  background-color: var(--white);
-  align-content: center;
-  display: grid;
-  height: 318px;
-  width: 318px;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
-  justify-content: center;
-  gap: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--white);
+    align-content: center;
+    display: grid;
+    height: 318px;
+    width: 318px;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    justify-content: center;
+    gap: 10px;
 }
 
-
 .game-cell {
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background-color: var(--grey);
-  cursor: pointer;
-  font-size: 30px;
-  text-align: center;
-
-  border: none;
-  outline: none;
-  
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--grey);
+    cursor: pointer;
+    font-size: 30px;
+    text-align: center;
+    border: none;
+    outline: none;
 }
 
 .game-cell:disabled {
-  cursor: auto;
+    cursor: auto;
 }
+
 
 /* Popup formatting */
 
-.popup_box{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
+.popup_box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
 }
 
-.popup_box{
-  width: 250px;
-  background: #f2f2f2;
-  text-align: center;
-  align-items: center;
-  padding: 40px;
-  border: 1px solid #b3b3b3;
-  box-shadow: 0px 5px 10px rgba(0,0,0,.2);
-  z-index: 9999;
-  display: none;
+.popup_box {
+    width: 250px;
+    background: #f2f2f2;
+    text-align: center;
+    align-items: center;
+    padding: 40px;
+    border: 1px solid #b3b3b3;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+    z-index: 9999;
+    display: none;
 }
 
-.popup_box i{
-  font-size: 60px;
-  color: #eb9447;
-  border: 5px solid #eb9447;
-  padding: 20px 40px;
-  border-radius: 50%;
-  margin: -10px 0 20px 0;
+.popup_box i {
+    font-size: 60px;
+    color: #eb9447;
+    border: 5px solid #eb9447;
+    padding: 20px 40px;
+    border-radius: 50%;
+    margin: -10px 0 20px 0;
 }
 
-.popup_box h1{
-  font-size: 20px;
-  color: #1b2631;
-  margin-bottom: 5px;
+.popup_box h1 {
+    font-size: 20px;
+    color: #1b2631;
+    margin-bottom: 5px;
 }
 
-.popup_box label{
-  font-size: 23px;
-  color: #404040;
+.popup_box label {
+    font-size: 23px;
+    color: #404040;
 }
 
-.popup_box .btns{
-  margin: 40px 0 0 0;
-  display: flex;
-  justify-content: space-between;
+.popup_box .btns {
+    margin: 40px 0 0 0;
+    display: flex;
+    justify-content: space-between;
 }
 
-.btns .btn1, .btns .btn2{
-  background: var(--red);
-  color: var(--white);
-  font-size: 18px;
-  border-radius: 5px;
-  border: 1px solid var(--red);
-  padding: 10px 13px;
-  height:50px;
-  width:50px;
-  text-align: center;
-  line-height: 50px;
-  font-size: 40px;
-  text-decoration: none;
+.btns .btn1,
+.btns .btn2 {
+    background: var(--red);
+    color: var(--white);
+    font-size: 18px;
+    border-radius: 5px;
+    border: 1px solid var(--red);
+    padding: 10px 13px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 40px;
+    text-decoration: none;
 }
 
-.btns .btn2{
-  margin-left: 20px;
-  background: var(--blue);
-  border: 1px solid var(--blue);
+.btns .btn2 {
+    margin-left: 20px;
+    background: var(--blue);
+    border: 1px solid var(--blue);
 }
 
-.btns .btn1:hover{
-  transition: .5s;
-  background: var(--red);
+.btns .btn1:hover {
+    transition: .5s;
+    background: var(--red);
 }
 
-.btns .btn2:hover{
-  transition: .5s;
-  background: var(--blue);
+.btns .btn2:hover {
+    transition: .5s;
+    background: var(--blue);
+}
+
+/* Line animation formatting */
+#line1 {
+    stroke: var(--light-green);
+    stroke-width: 10px;
+    opacity: 0.5;
 }
 
 /* X and O animation formatting */
 
 .naught {
-  stroke: var(--blue);
-  transform: rotateX(180deg);
+    stroke: var(--blue);
+    transform: rotateX(180deg);
 }
 
 .cross {
-  stroke: var(--red);
+    stroke: var(--red);
 }
 
- path, circle {
-  animation: draw var(--draw-speed) calc(var(--delay, 0) * var(--draw-speed))  ease-in both;
+path,
+circle {
+    animation: draw var(--draw-speed) calc(var(--delay, 0) * var(--draw-speed)) ease-in both;
 }
 
 path:nth-of-type(2) {
-  --delay: 1;
+    --delay: 1;
 }
 
 @keyframes draw {
-  to {
-    stroke-dashoffset: 0;
-  }
+    to {
+        stroke-dashoffset: 0;
+    }
 }
+
 
 /* Social formatting */
 
 .avatar {
-  margin-top: 35px;
-  border: 8px solid var(--white);
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  -webkit-box-shadow: 8px 8px 12px 12px #222222; 
-  box-shadow: 4px 4px 8px 8px #222222;
+    margin-top: 35px;
+    border: 8px solid var(--white);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    -webkit-box-shadow: 8px 8px 12px 12px #222222;
+    box-shadow: 4px 4px 8px 8px #222222;
 }
 
 .social-network {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 a.social-btn {
-  background-color: #222222;
-  width: 240px;
-  height: 56px;
-  border: none;
-  margin: 0;
-  outline: none;
-  transition: all 0.3s;
-  position: relative;
-  padding: 0;
-
-  text-decoration: none;
-  cursor: pointer;
-
-  display: flex;
-  align-items: center;
+    background-color: #222222;
+    width: 240px;
+    height: 56px;
+    border: none;
+    margin: 0;
+    outline: none;
+    transition: all 0.3s;
+    position: relative;
+    padding: 0;
+    text-decoration: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
 a.social-btn svg.btn-border {
-  position: absolute;
-  display: flex;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 56px;
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 56px;
 }
 
 a.social-btn svg.btn-border rect {
-  fill: none;
-  stroke: var(--white);
-  stroke-width: 0;
-  stroke-dasharray: 422, 0;
-  transition: all .3s linear;
+    fill: none;
+    stroke: var(--white);
+    stroke-width: 0;
+    stroke-dasharray: 422, 0;
+    transition: all .3s linear;
 }
 
 a.social-btn svg.fb-btn rect {
-  stroke: var(--fb);
+    stroke: var(--fb);
 }
 
 a.social-btn svg.gh-btn rect {
-  stroke: var(--gh);
+    stroke: var(--gh);
 }
 
 a.social-btn svg.gm-btn rect {
-  stroke: var(--gm);
+    stroke: var(--gm);
 }
 
 a.social-btn svg.ig-btn rect {
-  stroke: var(--ig);
+    stroke: var(--ig);
 }
 
 a.social-btn svg.ps-btn rect {
-  stroke: var(--ps);
+    stroke: var(--ps);
 }
 
 a.social-btn svg.yt-btn rect {
-  stroke: var(--yt);
+    stroke: var(--yt);
 }
 
 a.social-btn:hover svg.btn-border rect {
-  stroke-width: 5px;
-  stroke-dasharray: 56, 310;
-  stroke-dashoffset: 126;
-  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+    stroke-width: 5px;
+    stroke-dasharray: 56, 310;
+    stroke-dashoffset: 126;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 a.social-btn div {
-  width: 56px;
-  height: 56px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
+    width: 56px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 a.social-btn div svg {
-  width: 36px;
-  height: 36px;
-  fill: var(--white);
-  position: relative;
-
-  transition: all 0.3s;
+    width: 36px;
+    height: 36px;
+    fill: var(--white);
+    position: relative;
+    transition: all 0.3s;
 }
 
 a.social-btn div::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--white);
-  z-index: -2;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    z-index: -2;
 }
 
 a.social-btn div::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  background-color: var(--white);
-  transition: all .3s;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background-color: var(--white);
+    transition: all .3s;
 }
 
 a.social-btn:hover div::before {
-  height: 100%;
+    height: 100%;
 }
 
 a.social-btn span {
-  font-family: Poppins;
-  size: 48px;
-  color: var(--white);
-  font-weight: 800;
-  text-transform: uppercase;
-  margin-left: 10px;
+    font-family: Poppins;
+    size: 48px;
+    color: var(--white);
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-left: 10px;
 }
 
 a.social-btn div.facebook {
-  background-color: var(--fb);
+    background-color: var(--fb);
 }
 
 a.social-btn:hover div.facebook svg {
-  fill: var(--fb);
+    fill: var(--fb);
 }
 
 a.social-btn div.github {
-  background-color: var(--gh);
+    background-color: var(--gh);
 }
 
 a.social-btn:hover div.github svg {
-  fill: var(--gh);
+    fill: var(--gh);
 }
 
 a.social-btn div.gmail {
-  background-color: var(--gm);
+    background-color: var(--gm);
 }
 
 a.social-btn:hover div.gmail svg {
-  fill: var(--gm);
+    fill: var(--gm);
 }
 
 a.social-btn div.instagram {
-  background-color: var(--ig);
+    background-color: var(--ig);
 }
 
 a.social-btn:hover div.instagram svg {
-  fill: var(--ig);
+    fill: var(--ig);
 }
 
 a.social-btn div.playstore {
-  background-color: var(--ps);
+    background-color: var(--ps);
 }
 
 a.social-btn:hover div.playstore svg {
-  fill: var(--ps);
+    fill: var(--ps);
 }
 
 a.social-btn div.youtube {
-  background-color: var(--yt);
+    background-color: var(--yt);
 }
 
 a.social-btn:hover div.youtube svg {
-  fill: var(--yt);
+    fill: var(--yt);
 }
 
 #blink {
-  transition: 0.4s;
+    transition: 0.4s;
 }
