--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,11 @@ h1 span {
     color: var(--white);
 }
 
+.break-line{
+    width: 100%;
+    height: 80px;
+}
+
 .cover1 {
     display: flex;
     flex-direction: column;
@@ -148,6 +153,9 @@ h1 span {
     height: 600px;
     width: 350px;
     border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .cover2 {
@@ -157,8 +165,10 @@ h1 span {
     align-items: center;
     background-color: var(--grey);
     height: 50em;
-    width: 100%;
+    width: 95%;
     border-radius: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 
@@ -634,4 +644,141 @@ a.social-btn:hover div.youtube svg {
 
 #blink {
     transition: 0.4s;
+}
+
+/* ----------- iPhone 4 and 4S ----------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+
+/* ----------- iPhone 6+, 7+ and 8+ ----------- */
+
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+
+/* ----------- iPhone X ----------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- Galaxy S3 ----------- */
+
+/* Portrait */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: portrait) {
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- Galaxy S4, S5 and Note 3 ----------- */
+
+/* Portrait */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: portrait) {
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- Galaxy S6 ----------- */
+
+/* Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) 
+  and (orientation: portrait) {
+    .content-wrap{
+        font-size: small;
+    }
+}
+
+/* ----------- Galaxy Fold ----------- */
+
+/* Portrait */
+@media(max-width: 320px){ 
+    .content-wrap{
+        font-size: small;
+    }
+  }
+
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+    .content-wrap{
+        font-size: medium;
+    }
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) {
+      .content-wrap{
+          font-size: medium;
+      }
 }
