--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -262,7 +262,7 @@
         margin: 7.5px 0px 7.5px 0px;
     }
 
-    #but {
+    #restart {
         width: 47.5px;
         height: 15px;
         line-height: 15px;
